--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   firebase_auth: ^4.17.3
   firebase_auth_web: ^5.8.13
   google_sign_in: ^6.1.6
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
+  google_maps_flutter: ^2.5.3
+  geolocator: ^12.0.0
+  permission_handler: ^11.3.0
   js: ^0.6.7
 
 dev_dependencies:
@@ -30,6 +35,7 @@ flutter:
    - assets/onboard_slide2.png
    - assets/onboard_slide3.png
    - assets/logo.png
+   - assets/google-icon.png
   # fonts:
   #   - family: Schyler
   #     fonts:
